--- a/hua/config.json
+++ b/hua/config.json
@@ -9334,9 +9334,9 @@
       "resource": 10761
     },
     {
-      "key": "6a4b4453-f30b-5814-a829-e168ada9ddb6",
-      "name": "®️麻豆",
-      "api": "http://wuxu.cc/api.php/provide/vod/from/mdm3u8/",
+      "key": "写真",
+      "name": "®️写真",
+      "api": "https://kkzy.me/api.php/provide/vod/at/json",
       "download": "",
       "playUrl": "",
       "group": "CMS",
