--- a/hua/config.json
+++ b/hua/config.json
@@ -9334,7 +9334,7 @@
       "resource": 10761
     },
     {
-      "key": "写真",
+      "key": "xiezhen",
       "name": "®️写真",
       "api": "https://kkzy.me/api.php/provide/vod/at/json",
       "download": "",
